--- a/client/src/styles/base.css
+++ b/client/src/styles/base.css
@@ -1,26 +1,11 @@
-/* src/styles/base.css */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "./reset.css"; /* Reset phải lên đầu */
+@import "@fortawesome/fontawesome-free/css/all.min.css";
 
+/* Biến dùng chung */
 :root {
   --bg-color: rgb(243 244 246);
+  --bg-color-dark: #0f172a;
   --text-color: rgb(9 9 11);
-  --btn-color: #00bcd4;
-}
 
-.dark {
-  --bg-color: rgb(0, 0, 0);
-  --text-color: rgb(250 250 250);
-  --btn-color: #00bcd4; /* hoặc tùy chỉnh thêm */
-}
-
-body {
-  background-color: var(--bg-color);
-  color: var(--text-color);
-}
-
-button {
-  background-color: var(--btn-color);
-  color: var(--text-color);
+  --bg-light-mode: ;
 }
