--- a/client/src/styles/reset.css
+++ b/client/src/styles/reset.css
@@ -1,12 +1,6 @@
-/* Import base styles từ Tailwind */
-@import "./styles/base.css";
-/* Import các styles dành cho layout */
-@import "./styles/layouts.css";
-/* Import các styles dành cho component */
-@import "./styles/components.css";
-/* Import các utilities tùy chỉnh */
-@import "./styles/util.css";
-@import "@fortawesome/fontawesome-free/css/all.min.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 *,
 *:before,
@@ -42,4 +36,21 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
+}
+
+.video_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.player__wrapper {
+  position: relative;
+}
+.player {
+  border: 2px solid #7b2cbf;
+  object-fit: cover;
+  padding: 0;
+  margin: 0;
 }
